test/corpus/preamble_dependencies.txt
===============================================================================
Preamble Dependencies (BuildRequires with simple package name)
===============================================================================

Name:           tree-sitter-rpmspec
BuildRequires:  tree-sitter-cli

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (word))))

===============================================================================
Preamble Dependencies (Requires with qualifier and package name)
===============================================================================

Name:           tree-sitter-rpmspec
Requires(pre):  tree-sitter-cli

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag
        (qualifier))
      (word))))

===============================================================================
Preamble Dependencies (Requires with multiple packages)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       pkgA, pkgB

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (concatenation
        (word)
        (word)))))

===============================================================================
Preamble Dependencies (Requires with boolean OR dependency)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       (tree-sitter-cli or tree-sitter-cli2)

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (parenthesized_expression
        (boolean_operator
          (word)
          (word))))))

===============================================================================
Preamble Dependencies (Requires with boolean dependency and version)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       ( pkgA >= 1.2.3 or pkgB )

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (dependency_tag)
      (parenthesized_expression
        (boolean_operator
          (comparison_operator
            (word)
            (version))
          (word))))))

===============================================================================
Preamble Dependencies (Provides with package and value)
===============================================================================

Name:           tree-sitter-rpmspec
Provides:       tree-sitter-rpm-spec = bar

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (word)))))

===============================================================================
Preamble Dependencies (Dependencies with multiple version operators)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       cmake >= 3.10
Requires:       gcc < 12.0
BuildRequires:  python3 >= 3.8.0

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version)))))

===============================================================================
Preamble Dependencies (Complex boolean dependencies with versions)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       (package1 >= 1.0 and package2) or package3

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (boolean_operator
        left: (parenthesized_expression
          (boolean_operator
            left: (comparison_operator
              (word)
              (version))
            right: (word)))
        right: (word)))))

===============================================================================
Preamble Dependencies (Dependencies with epoch prefixes)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       package = 2:1.0.0-1
BuildRequires:  another-package >= 1:2.0.0

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version)))))

===============================================================================
Preamble Dependencies (All comparison operators in dependencies)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       package1 >= 1.0
Requires:       package2 <= 2.0
Requires:       package3 != 1.5
Requires:       package4 < 3.0
Requires:       package5 > 0.5

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version)))))

===============================================================================
Preamble Dependencies (Nested parenthesized boolean dependencies)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       ((package1 >= 1.0 and package2) or (package3 and package4 >= 2.0))

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (parenthesized_expression
        (boolean_operator
          left: (parenthesized_expression
            (boolean_operator
              left: (comparison_operator
                (word)
                (version))
              right: (word)))
          right: (parenthesized_expression
            (boolean_operator
              left: (word)
              right: (comparison_operator
                (word)
                (version)))))))))

===============================================================================
Preamble Dependencies (Dependencies with macro expansions in versions)
===============================================================================

Name:           tree-sitter-rpmspec
Version:        1.2.3
Release:        1%{?dist}
Requires:       main-package = %{version}
BuildRequires:  dev-package >= %{version}
Provides:       virtual-service = %version

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      (word)))
  (preamble
    (tags
      (tag)
      (version)))
  (preamble
    (tags
      (tag)
      (concatenation
        (integer)
        (macro_expansion
          (conditional_expansion
            (identifier))))))
  (preamble
    (tags
      (dependency_tag)
      (comparison_operator
        (word)
        (macro_expansion
          (identifier)))))
  (preamble
    (tags
      (dependency_tag)
      (comparison_operator
        (word)
        (macro_expansion
          (identifier)))))
  (preamble
    (tags
      (dependency_tag)
      (comparison_operator
        (word)
        (macro_simple_expansion
          (identifier))))))

===============================================================================
Preamble Dependencies (Boolean dependencies with macro versions)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       (package1 = %{version} and package2 >= %version) or package3

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (boolean_operator
        left: (parenthesized_expression
          (boolean_operator
            left: (comparison_operator
              (word)
              (macro_expansion
                (identifier)))
            right: (comparison_operator
              (word)
              (macro_simple_expansion
                (identifier)))))
        right: (word)))))

===============================================================================
Preamble Dependencies (Boolean dependencies with mixed epoch versions)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       (package1 = 2:1.0.0-1 and package2 >= 3.0) or package3

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (boolean_operator
        left: (parenthesized_expression
          (boolean_operator
            left: (comparison_operator
              (word)
              (version))
            right: (comparison_operator
              (word)
              (version))))
        right: (word)))))

===============================================================================
Preamble Dependencies (Weak dependencies using Recommends tag)
===============================================================================

Name:           tree-sitter-rpmspec
Recommends:     optional-package >= 1.0
Recommends:     another-optional

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (word))))

===============================================================================
Preamble Dependencies (Weak dependencies using Suggests tag)
===============================================================================

Name:           tree-sitter-rpmspec
Suggests:       nice-to-have-package
Suggests:       extra-feature = 2.0

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version)))))

===============================================================================
Preamble Dependencies (Weak dependencies using Supplements and Enhances)
===============================================================================

Name:           tree-sitter-rpmspec
Supplements:    main-package
Enhances:       enhanced-package >= 1.5

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version)))))

===============================================================================
Preamble Dependencies (Dependencies with complex release numbers)
===============================================================================

Name:           tree-sitter-rpmspec
Requires:       package = 1.0-1.fc35
BuildRequires:  another = 2:1.5.0-2.el8

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version)))))

===============================================================================
Preamble Dependencies (Dependencies with explicit zero epoch)
===============================================================================

Name:           tree-sitter-rpmspec
Provides:       service = 0:2.1.0-3.fc35
Conflicts:      old-service <= 0:1.0.0

-------------------------------------------------------------------------------

(spec
  (preamble
    (tags
      (tag)
      value: (word)))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version))))
  (preamble
    (tags
      (dependency_tag)
      value: (comparison_operator
        (word)
        (version)))))
