test/corpus/strings.txt
===============================================================================
Basic quoted string
===============================================================================

%define foo "simple string"

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (quoted_string
      (quoted_string_content))))

===============================================================================
Escaped quotes in quoted strings
===============================================================================

%define foo "bar \"quoted\" text"

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (quoted_string
      (quoted_string_content))))

===============================================================================
Mixed escaped and unescaped content
===============================================================================

%define foo "start \"middle\" end"

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (quoted_string
      (quoted_string_content))))

===============================================================================
Multiple escape sequences
===============================================================================

%define foo "text with \\backslash and \"quotes\""

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (builtin)
    (identifier)
    (quoted_string
      (quoted_string_content))))